<resources>
    <string name="app_name">Contactos</string>
    <string name="search">Buscar</string>
    <string name="add">Insertar</string>
    <string name="name">Nombre</string>
    <string name="apellido">Apellidos</string>
    <string name="city">Ciudad</string>
    <string name="phone">Telefono</string>
    <string name="email">Email</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="action_exit">Salir</string>
    <string name="action_preferences">Preferencias</string>
    <string name="title_activity_login">Iniciar Sesión</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo Electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión o Registrarse</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
